test: testes de integração do encerramento de sessões via scheduler
- Implementa testes de integração (IT) utilizando Testcontainers (Postgres + Kafka)
- Valida o ciclo completo: Expiração de sessão -> Contabilização -> Evento Kafka
- Assegura que apenas sessões abertas e expiradas são processadas
- Verifica a corretude do payload JSON enviado para o tópico de resultados